# robot_programming

./: .gitignore  README.md
inheritance/: 04_inheritance.cpp  07_late_binding.cpp
prove_makefile/esecuzione/: Makefile
proving_c/: prova.cpp
ros2_ws/: .gitignore  Readme.md  cyclonedds.xml  fastdds.xml  pixi.toml
ros2_ws/src/: Readme.md
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp
ros2_ws/src/hello_world_pkg/: CMakeLists.txt  Readme.md  package.xml
ros2_ws/src/hello_world_pkg/src/: hello_world_name.cpp
rp_00_makefile_training/: file2.cpp
rp_01_compilers_and_build_systems/: CMakeLists.txt
rp_01_compilers_and_build_systems/executables/: CMakeLists.txt
rp_01_compilers_and_build_systems/src/: CMakeLists.txt
rp_02_cpp_intro/: CMakeLists.txt
rp_02_cpp_intro/src/btree/: btree.cpp  btree.h  btree_test.cpp
rp_02_cpp_intro/src/linalg/: CMakeLists.txt  mat_f.cpp  mat_f.h  mat_f_test.cpp  vec_f.cpp  vec_f.h  vec_f_test.cpp
rp_02b_cpp_inheritance/: .gitignore
rp_02b_cpp_inheritance/in_class/: .gitignore  my_sim_in_class.cpp
rp_03_ros_basics/: Readme.md  pixi.toml
rp_03_ros_basics/src/rp_simple_controller/: CMakeLists.txt  package.xml
rp_03_ros_basics/src/rp_simple_controller/src/: turtle_square.cpp
